# 3D_graphics

./: CMakeLists.txt  Face.h  Globals.h  README.md  SDL2_gfxPrimitives.c  Solid.h  main.cpp
